Fixed a mobile spacing issue

--- a/src/sass/themes/wwf.scss
+++ b/src/sass/themes/wwf.scss
@@ -1070,8 +1070,12 @@
 
     // position: relative;
     // top: -27px;
-    margin-top: -27px;
+
     margin-bottom: 18px;
+
+    @media screen and (min-width: 601px) {
+      margin-top: -27px;
+    }
 
     label {
       padding-left: 8px;
